Changed Open source to open in a new tab

--- a/index.html
+++ b/index.html
@@ -140,7 +140,9 @@
     <div class="row footer">
       <div class="col-9">
         <p>
-          <a href="https://github.com/nataliarodmo/my-weather-app.git"
+          <a
+            href="https://github.com/nataliarodmo/my-weather-app.git"
+            target="”_blank”"
             >Open Source-code</a
           >
           by Natalia R
