--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
 
       <div class="row current_weather">
         <div class="col-5">
-          <h1 class="city-input" id="city">Toronto</h1>
+          <h1 class="city-input" id="city"></h1>
           <ul>
-            <li id="date">Sunday 13:52</li>
-            <li id="humidity">Humidity: 36%</li>
-            <li id="wind">Wind: 11 km/h</li>
-            <li class="capitalize" id="description">Sunny</li>
+            <li id="date"></li>
+            <li>Humidity: <span id="humidity"></span>%</li>
+            <li>Wind: <span id="wind"></span> km/h</li>
+            <li class="capitalize" id="description"></li>
           </ul>
         </div>
         <div class="col-6 text-center">
