--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </ul>
         </div>
         <div class="col-6 text-center">
-          <img class="sunny" src="Images/cloudy.png" alt="weather" />
+          <img class="main_icon" src="" alt="weather" id="icon" />
           <span class="actual_number" id="current-temperature"> 17 </span>
           <span class="units">
             <a href="#" id="celsius-link"> ºC</a>
