--- a/index.html
+++ b/index.html
@@ -73,72 +73,67 @@
       </div>
       <div class="row forecast">
         <div class="col text-center">
-          <ul>
-            <li>Thu</li>
-            <li>
-              <img
+          <div class="weather-forecast-day"> Thu</div>
+          <img
                 class="sunny_forecast"
                 src="Images/cloudy.png"
                 alt="weather"
               />
-            </li>
-            <li>14º 5º</li>
-          </ul>
+          <div class="weather-forecast-temperature"> 
+            <span class="weather-forecast-temperature-max">14º </span>
+            <span class="weather-forecast-temperature-min">5º </span>
+          </div>
         </div>
         <div class="col text-center">
-          <ul>
-            <li>Fri</li>
-            <li>
-              <img
+          <div class="weather-forecast-day"> Fri</div>
+          <img
                 class="sunny_forecast"
                 src="Images/cloudy.png"
                 alt="weather"
               />
-            </li>
-            <li>19º 8º</li>
-          </ul>
+          <div class="weather-forecast-temperature"> 
+            <span class="weather-forecast-temperature-max">19º </span>
+            <span class="weather-forecast-temperature-min">8º </span>
+          </div>
         </div>
         <div class="col text-center">
-          <ul>
-            <li>Sat</li>
-            <li>
-              <img
+          <div class="weather-forecast-day">Sat</div>
+          <img
                 class="sunny_forecast"
                 src="Images/cloudy.png"
                 alt="weather"
               />
-            </li>
-            <li>16º 11º</li>
-          </ul>
+          <div class="weather-forecast-temperature"> 
+            <span class="weather-forecast-temperature-max">16º </span>
+            <span class="weather-forecast-temperature-min">11º </span>
+          </div>
         </div>
         <div class="col text-center">
-          <ul>
-            <li>Sun</li>
-            <li>
-              <img
+          <div class="weather-forecast-day">Sun</div>
+          <img
                 class="sunny_forecast"
                 src="Images/cloudy.png"
                 alt="weather"
               />
-            </li>
-            <li>20º 9º</li>
-          </ul>
+          <div class="weather-forecast-temperature"> 
+            <span class="weather-forecast-temperature-max">20º </span>
+            <span class="weather-forecast-temperature-min">9º </span>
+          </div>
         </div>
         <div class="col text-center">
-          <ul>
-            <li>Mon</li>
-            <li>
-              <img
+          <div class="weather-forecast-day">Mon</div>
+          <img
                 class="sunny_forecast"
                 src="Images/cloudy.png"
                 alt="weather"
               />
-            </li>
-            <li>14º 11º</li>
-          </ul>
-        </div>
+          <div class="weather-forecast-temperature"> 
+            <span class="weather-forecast-temperature-max">14º </span>
+            <span class="weather-forecast-temperature-min">11º </span>
+          </div>
+        </div> 
       </div>
-    </div>
+    </div>     
     <div class="row footer">
       <div class="col-9">
         <p>
