Forecast with HTML to java

--- a/index.html
+++ b/index.html
@@ -71,67 +71,7 @@
           </div>
         </div>
       </div>
-      <div class="row forecast">
-        <div class="col text-center">
-          <div class="weather-forecast-day"> Thu</div>
-          <img
-                class="sunny_forecast"
-                src="Images/cloudy.png"
-                alt="weather"
-              />
-          <div class="weather-forecast-temperature"> 
-            <span class="weather-forecast-temperature-max">14º </span>
-            <span class="weather-forecast-temperature-min">5º </span>
-          </div>
-        </div>
-        <div class="col text-center">
-          <div class="weather-forecast-day"> Fri</div>
-          <img
-                class="sunny_forecast"
-                src="Images/cloudy.png"
-                alt="weather"
-              />
-          <div class="weather-forecast-temperature"> 
-            <span class="weather-forecast-temperature-max">19º </span>
-            <span class="weather-forecast-temperature-min">8º </span>
-          </div>
-        </div>
-        <div class="col text-center">
-          <div class="weather-forecast-day">Sat</div>
-          <img
-                class="sunny_forecast"
-                src="Images/cloudy.png"
-                alt="weather"
-              />
-          <div class="weather-forecast-temperature"> 
-            <span class="weather-forecast-temperature-max">16º </span>
-            <span class="weather-forecast-temperature-min">11º </span>
-          </div>
-        </div>
-        <div class="col text-center">
-          <div class="weather-forecast-day">Sun</div>
-          <img
-                class="sunny_forecast"
-                src="Images/cloudy.png"
-                alt="weather"
-              />
-          <div class="weather-forecast-temperature"> 
-            <span class="weather-forecast-temperature-max">20º </span>
-            <span class="weather-forecast-temperature-min">9º </span>
-          </div>
-        </div>
-        <div class="col text-center">
-          <div class="weather-forecast-day">Mon</div>
-          <img
-                class="sunny_forecast"
-                src="Images/cloudy.png"
-                alt="weather"
-              />
-          <div class="weather-forecast-temperature"> 
-            <span class="weather-forecast-temperature-max">14º </span>
-            <span class="weather-forecast-temperature-min">11º </span>
-          </div>
-        </div> 
+      <div class="weather-forecast" id="forecast">
       </div>
     </div>     
     <div class="row footer">
