Removing Fahrenheit conversion

--- a/index.html
+++ b/index.html
@@ -61,19 +61,14 @@
         </div>
         <div class="col-7 text-center">
           <div class="clearfix weather-temperature">
-              <img class="main_icon float-left" src="" alt="weather" id="icon"/>
-              <span class="actual_number" id="current-temperature"> </span>
-              <span class="units">
-                <a href="#" id="celsius-link" class="active"> ºC</a>
-                |
-                <a href="#" id="fahrenheit-link"> ºF</a>
-          
+            <img class="main_icon float-left" src="" alt="weather" id="icon" />
+            <span class="actual_number" id="current-temperature"> </span>
+            <span class="units"> ºC </span>
           </div>
         </div>
       </div>
-      <div class="weather-forecast" id="forecast">
-      </div>
-    </div>     
+      <div class="weather-forecast" id="forecast"></div>
+    </div>
     <div class="row footer">
       <div class="col-9">
         <p>
